# Deepsearch-chatbot-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  003_analytics_indexes.py  004_simplification.py  005_add_idempotency_key.py  006_add_qualification_steps.py  007_normalize_qualification_ids.py  208a924c7d62_add_qualification_to_sessions.py
src/: main.py
src/api/: health.py
src/api/v1/public/: leads.py  sessions.py
src/core/: config.py  database.py  logging.py
src/integrations/: tasks.py
src/integrations/booking/: schemas.py  service.py
src/integrations/calendly/: __init__.py  schemas.py  service.py
src/integrations/crm/: base.py  factory.py  null_adapter.py
src/integrations/email/: html_templates.py  service.py
src/integrations/email/templates/: client.en.html.j2  client.it.html.j2  (+1 more)
src/middleware/: rate_limit.py  request_id.py
src/models/: __init__.py  base.py  event.py  lead.py  session.py
src/schemas/: errors.py  lead_capture.py
src/services/: lead_capture.py
tests/: conftest.py
tests/contract/: test_lead_capture.py  test_multilang.py
tests/integration/: test_crm_sync.py  test_lead_persistence.py
tests/perf/: smoke_test.py
tests/unit/: test_booking_service.py  test_calendly_service.py  test_config.py  test_email_html_templates.py  test_email_localization.py  test_email_service.py  test_lead_capture.py  test_pii_security.py  test_qualification_normalization.py
